# mnist-ncnn-executing

./: CMakeLists.txt  README.md  main.cpp
model/: mnist-opt.param
